feat(kitchen app): adds kitchen app and style improvements

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -2,7 +2,10 @@
 name = "mctk_core"
 description = "Core of Mecha toolkit for Linux Wayland Clients"
 version = "0.1.0"
-authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
+authors = [
+    "Akshay Raina <akshayr@mechasystems.com",
+    "Shoaib Merchant <shoaibm@mechasystems.com>",
+]
 documentation = "https://docs.mecha.so"
 edition = "2021"
 license = "MIT"
@@ -14,20 +17,20 @@ default = []
 instrumented = ["superluminal-perf"]
 
 [dependencies]
-mctk_macros = { path="../macros" }
+mctk_macros = { path = "../macros" }
 rgb = "0.8.20"
 imgref = "1.6.1"
 bytemuck = { version = "1.4", features = ["derive"] }
-anyhow = { version = "1.0.75", features = ["backtrace"]}
+anyhow = { version = "1.0.75", features = ["backtrace"] }
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 raw-window-handle = "0.5.2"
 futures = "0.3.28"
 wayland-backend = { version = "0.3.2", features = ["client_system"]}
 femtovg = {version = "0.8.2", features = ["image", "image-loading"], default-features = false }
 image = { version = "0.24.9", features = ["png", "jpeg"] }
 crossbeam-channel = "0.5.11"
-cosmic-text = { git="https://github.com/pop-os/cosmic-text", rev="19b4d8336e34073bb51b83578d3d803c8c953787" }
+cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "19b4d8336e34073bb51b83578d3d803c8c953787" }
 swash = "0.1.12"
 glutin = "0.30.10"
 euclid = "0.22.3"
@@ -41,6 +44,7 @@ lazy_static = "1.4.0"
 sys-locale = "0.3.1"
 glyph_brush_layout = "0.2"
 smithay-client-toolkit = "0.18.0"
+rand = "0.8.5"
 
 # features
 superluminal-perf = { version = "0.1", optional = true }
