--- a/examples/camera/Cargo.toml
+++ b/examples/camera/Cargo.toml
@@ -24,3 +24,4 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
 thiserror = "1.0"
 tokio = { version = "1.33", features = ["full"] }
+rgb = "0.8.50"
