--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -28,7 +28,8 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 raw-window-handle = "0.5.2"
 futures = "0.3.28"
 wayland-backend = { version = "0.3.2", features = ["client_system"]}
-femtovg = {version = "0.8.2", features = ["image", "image-loading"], default-features = false }
+# femtovg = {version = "0.8.2", features = ["image", "image-loading"], default-features = false }
+femtovg = { git = "https://github.com/namana-mecha/femtovg", rev="9423d2ccc97f0202f8afcaf9b21c588e80ddf460", features = ["image", "image-loading"], default-features = false }
 image = { version = "0.24.9", features = ["png", "jpeg"] }
 crossbeam-channel = "0.5.11"
 cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "19b4d8336e34073bb51b83578d3d803c8c953787" }
